--- a/source/index.html
+++ b/source/index.html
@@ -77,7 +77,7 @@
 
             <li class="bridge">
               <div class="bridge__wrap">
-                <h3 class="bridge__title">Там есть мост дьявола</h3>
+                <h3 class="bridge__title">Там есть <br> мост дьявола</h3>
                 <span class="bridge__number">– №2 –</span>
                 <p class="bridge__recomendation">Да, по нему можно пройти! Если вы <br>осмелитесь, конечно</p>
               </div>
@@ -105,7 +105,7 @@
 
         <section class="question">
           <h2 class="question__text">Заинтересовались?</h2>
-          <p class="question__content">Укажите предполагаемые даты<br> поездки, и мы покажем вам лучшие <br> предложения гостиниц в Седоне</p>
+          <p class="question__content">Укажите предполагаемые даты<br> поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <a class="question__search button" href="#">Найти гостиницу</a>
         </section>
 
